--- a/design/index.html
+++ b/design/index.html
@@ -26,8 +26,7 @@
     <script type="text/javascript" src="theme/js/jquery.lightbox_me.js"></script>
 
     <!-- Jquery UI -->
-    <script type="text/javascript" src="theme/css/jquery-ui.css"></script>
-    <script type="text/javascript" src="theme/js/jquery-ui.js"></script>
+    <!--<script type="text/javascript" src="theme/js/jquery-ui.js"></script>-->
 
 
     <!-- Font Awesome -->
@@ -82,8 +81,8 @@
             id="dangnha_aj" name="dangkytv" value="Đăng nhập">
         <p style="text-align: center; padding-top: 20px; padding-bottom: 10px">Hoặc đăng nhập bằng tài khoản</p><a
                 style="margin-right: 16px" href="http://localhost/pi_maybay/dang-nhap-facebook/"><img
-                src="http://localhost/pi_maybay/view/default/theme/images/face.png" title="Facebook" alt="Facebook"></a><a
-                href=""><img src="http://localhost/pi_maybay/view/default/theme/images/google.png" title="Google"
+                src="theme/images/face.png" title="Facebook" alt="Facebook"></a><a
+                href=""><img src="theme/images/google.png" title="Google"
                              alt="Google"></a></div>
     <script>$(document).ready(function () {
         $("#dangnha_aj").click(function () {
@@ -333,7 +332,7 @@
                             <div class="col-md-6 col-sm-12 tim-kiem"><p><input type="submit" value="Tìm chuyến bay"
                                                                                name="bntTimKiem"></p></div>
                             <div class="col-md-6 col-sm-12 logo-coarch"><a href="#"><img
-                                    src="http://localhost/pi_maybay/view/default/theme/images/logo-coach.jpg"
+                                    src="theme/images/logo-coach.jpg"
                                     alt=""></a></div>
                         </div>
                     </form>
@@ -601,9 +600,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
@@ -630,9 +629,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
@@ -658,9 +657,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
@@ -687,9 +686,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
@@ -716,9 +715,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
@@ -745,9 +744,9 @@
                                         </p>
                                             <p style="background: none; padding-top: 0px" class="chat"><a
                                                     style="margin-right: 10px" href="ymsgr:sendim?tvt_hut"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/yahoo.png"></a><a
+                                                    src="theme/images/yahoo.png"></a><a
                                                     href="Skype:tungphongtom?chat"><img
-                                                    src="http://localhost/pi_maybay/view/default/theme/images/skype.png"></a><span
+                                                    src="theme/images/skype.png"></a><span
                                                     style="display: block">tourcoach2013@gmail.com</span></p>
                                             <div class="clearfix"></div>
                                         </div>
