--- a/design/index.html
+++ b/design/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="theme/js/jquery.lightbox_me.js"></script>
 
     <!-- Jquery UI -->
-    <!--<script type="text/javascript" src="theme/js/jquery-ui.js"></script>-->
+    <script type="text/javascript" src="theme/js/jquery-ui.js"></script>
 
 
     <!-- Font Awesome -->
